<?xml version="1.0"?>
<package format="2">
  <name>capra_launch_handler</name>
  <version>0.0.0</version>
  <description>The capra_launch_handler package</description>
  <maintainer email="capra@todo.todo">Capra</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

</package>
